* Bug #34093: show also Active Directory warning in edit mode (merge svn r52385) * Bug #34093: fix displaying of warning in navigation flavor
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52386 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (5.0.2-1) unstable; urgency=low
+
+  * Bug #34093: show also Active Directory warning in edit mode (merge svn r52385)
+  * Bug #34093: fix displaying of warning in navigation flavor 
+
+ -- Florian Best <best@univention.de>  Wed, 30 Jul 2014 15:34:21 +0200
+
 univention-management-console-module-udm (5.0.1-1) unstable; urgency=low
 
   * Bug #34093: evaluate module flavor when showing warning about object
