* Script well-known-sid-object-rename (Bug #35507):   * Improved logging (also to stdout)   * Improved docstrings   * Avoid shady ucr hack
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52388 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-ad-connector (8.0.17-58) unstable; urgency=medium
+
+  * Script well-known-sid-object-rename (Bug #35507):
+    * Improved logging (also to stdout)
+    * Improved docstrings
+    * Avoid shady ucr hack
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 15:41:31 +0200
+
 univention-ad-connector (8.0.17-57) unstable; urgency=low
 
   * Bug #35090: Improve certificate/SSL handling
