Bug #35522 base-files: Update templates for /etc/init.d/ files
Update init scripts of cron, klogd, networking, openbsd-inetd from
Debian Wheezy.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52393 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.0-4) unstable; urgency=low
+
+  * Update templates for /etc/init.d/ files (Bug #35522)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 30 Jul 2014 15:45:04 +0200
+
 univention-base-files (4.0.0-3) unstable; urgency=low
 
   * Removed console-tools from dependency list otherwise the initial
