--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.98-1) unstable; urgency=low
+
+  * version bump; Bug #34093
+
+ -- Florian Best <best@univention.de>  Wed, 30 Jul 2014 15:50:02 +0200
+
 univention-management-console-module-udm (4.0.97-39) unstable; urgency=low
 
   * Bug #34093: show also Active Directory warning in edit mode
