--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.0-5) unstable; urgency=low
+
+  * Bug #35508: merge svn52332 and svn52355
+
+ -- Florian Best <best@univention.de>  Wed, 30 Jul 2014 15:58:26 +0200
+
 univention-updater (10.0.0-4) unstable; urgency=low
 
   * Readd univention-directory-policy dependency (Bug #35431)
