* In AD Member mode we need to run the first parts of the S4 Connector   joinscript before starting and waiting for the sync. * In AD Member mode we should let the Samba4 joinscript run to the end   after the initial join (Bug #35346).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52401 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-module-adtakeover (1.0.10-37) unstable; urgency=medium
+
+  * In AD Member mode we need to run the first parts of the S4 Connector
+    joinscript before starting and waiting for the sync.
+  * In AD Member mode we should let the Samba4 joinscript run to the end
+    after the initial join (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:02:25 +0200
+
 univention-management-console-module-adtakeover (1.0.10-36) unstable; urgency=medium
 
   * Don't run all remaining joinscripts during disable_admember_mode
