* When running AD Takeover from AD Member mode we should stop the joinscript   after creating the required UDM containers and before starting sync and   waiting for DNS replication (Bug #35500). * Make logrotate only "crestart" the s4-connector
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52402 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-s4-connector (8.0.33-68) unstable; urgency=medium
+
+  * When running AD Takeover from AD Member mode we should stop the joinscript
+    after creating the required UDM containers and before starting sync and
+    waiting for DNS replication (Bug #35500).
+  * Make logrotate only "crestart" the s4-connector
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:12:04 +0200
+
 univention-s4-connector (8.0.33-67) unstable; urgency=medium
 
   * Remove univention-ad-takeover CLI script (Bug #35514)
