--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-38) unstable; urgency=medium
+
+  * Fix some comments (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:13:25 +0200
+
 univention-management-console-module-adtakeover (1.0.10-37) unstable; urgency=medium
 
   * In AD Member mode we need to run the first parts of the S4 Connector
