* No need to make a fuss about the first parts of the S4 Connector   joinscript, we simply run it once before samba DC is initialized.   (Bug #35346).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52407 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-adtakeover (1.0.10-39) unstable; urgency=medium
+
+  * No need to make a fuss about the first parts of the S4 Connector
+    joinscript, we simply run it once before samba DC is initialized.
+    (Bug #35346).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:39:41 +0200
+
 univention-management-console-module-adtakeover (1.0.10-38) unstable; urgency=medium
 
   * Fix some comments (Bug #35346).
