* Set more attributes to readonly when synced (Bug #34092)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52416 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-19) unstable; urgency=low
+
+  * Set more attributes to readonly when synced (Bug #34092)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Jul 2014 07:53:10 +0200
+
 univention-directory-manager-modules (9.0.76-18) unstable; urgency=medium
 
   * revert changes for (Bug #35254)
