* Bug #34093: fix displaying of message for non-AD objects
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52418 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-40) unstable; urgency=low
+
+  * Bug #34093: fix displaying of message for non-AD objects
+
+ -- Florian Best <best@univention.de>  Thu, 31 Jul 2014 08:02:24 +0200
+
 univention-management-console-module-udm (4.0.97-39) unstable; urgency=low
 
   * Bug #34093: show also Active Directory warning in edit mode
