--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.99-1) unstable; urgency=low
+
+  * Bug #34093: fix displaying of message for non-AD objects (merge svn52418)
+
+ -- Florian Best <best@univention.de>  Thu, 31 Jul 2014 08:52:47 +0200
+
 univention-management-console-module-udm (4.0.98-1) unstable; urgency=low
 
   * version bump; Bug #34093
