* Bug #34093: fix displaying of message for non-AD objects (merge svn52418)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52421 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.0.3-1) unstable; urgency=low
+
+  * Bug #34093: fix displaying of message for non-AD objects (merge svn52418)
+
+ -- Florian Best <best@univention.de>  Thu, 31 Jul 2014 08:54:57 +0200
+
 univention-management-console-module-udm (5.0.2-1) unstable; urgency=low
 
   * Bug #34093: show also Active Directory warning in edit mode (merge svn r52385)
