Bug #34484: * Improved handling of DHCP network values * Fixed typos * Fixed jslint errors
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52424 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/umc/js/de.po
+++ b/base/univention-system-setup/umc/js/de.po
@@ -277,7 +277,7 @@ msgstr ""
 
 #: umc/js/setup/ApplianceWizard.js:1533
 msgid "At least one network device needs to be properly configured."
-msgstr "Wenigstens ein Netzwerkgerät muss konfiguiert werden."
+msgstr "Mindestens ein Netzwerkgerät muss konfiguiert werden."
 
 #: umc/js/setup/InterfaceWizard.js:313 umc/js/setup/Interfaces.js:119
 msgid "Autoconfiguration (SLAAC)"
@@ -979,7 +979,7 @@ msgstr "Bitte Löschung der folgenden Netzwerkgeräte bestätigen:"
 
 #: umc/js/setup/ApplianceWizard.js:635
 msgid "Preferred UCS domain name server"
-msgstr "Bevorzugter Domänen-DNS-Server"
+msgstr "Bevorzugter UCS-Domänen-DNS-Server"
 
 #: umc/js/setup/ApplianceWizard.js:648
 msgid "Preferred external name server"
