--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (7.0.69-44) unstable; urgency=medium
+
+  Bug #34484:
+  * Improved handling of DHCP network values
+  * Fixed typos
+  * Fixed jslint errors
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Jul 2014 11:21:58 +0200
+
 univention-system-setup (7.0.69-43) unstable; urgency=medium
 
   Bug #34484:
