--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-41) unstable; urgency=low
+
+  * fixed ldap/sasl/secprops/maxssf (Bug #35513)
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Jul 2014 12:11:57 +0200
+
 univention-ldap (10.0.17-40) unstable; urgency=low
 
   * added ldap/sasl/secprops/maxssf (Bug #35513) 
