Bug #35090: * Automatically add a host static entry in the connector configuration * Added translations [WIP] * Fixed jslint errors, removed unneeded parts
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52428 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-ad-connector (8.0.17-59) unstable; urgency=medium
+
+  Bug #35090:
+  * Automatically add a host static entry in the connector configuration
+  * Added translations [WIP]
+  * Fixed jslint errors, removed unneeded parts
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Jul 2014 14:13:22 +0200
+
 univention-ad-connector (8.0.17-58) unstable; urgency=medium
 
   * Script well-known-sid-object-rename (Bug #35507):
