* don't test_connection in upload_certificate if     connector settings are not valid Bug #35090
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52432 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-61) unstable; urgency=low
+
+  * don't test_connection in upload_certificate if
+    connector settings are not valid Bug #35090 
+
+ -- Felix Botner <botner@univention.de>  Thu, 31 Jul 2014 15:40:11 +0200
+
 univention-ad-connector (8.0.17-60) unstable; urgency=low
 
   * use ip for server_supports_ssl Bug #35090 
