* Make default for _prevent_to_change_ad_properties dependent on ad/member   (Bug #34092)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52435 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-22) unstable; urgency=medium
+
+  * Make default for _prevent_to_change_ad_properties dependent on ad/member
+    (Bug #34092)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Jul 2014 17:32:20 +0200
+
 univention-directory-manager-modules (9.0.76-21) unstable; urgency=low
 
   * Set more windows client attributes to readonly when synced
