Bug #35090: * added piwik topic publishing * adjusted texts and added translations * pre-select AD member mode on start page * hide start/stop buttons for password service + fixed backend function * added missing images * enable 'cancel' button * fixed some internal page navigation logic * added hint to allow port for password sync on windows * added target="_blank" for UMCP based download links on IE * automatically advance in (connector config) wizard after uploading AD   root certificate
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52437 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,20 @@
+univention-ad-connector (8.0.17-62) unstable; urgency=medium
+
+  Bug #35090:
+  * added piwik topic publishing
+  * adjusted texts and added translations
+  * pre-select AD member mode on start page
+  * hide start/stop buttons for password service + fixed backend function
+  * added missing images
+  * enable 'cancel' button
+  * fixed some internal page navigation logic
+  * added hint to allow port for password sync on windows
+  * added target="_blank" for UMCP based download links on IE
+  * automatically advance in (connector config) wizard after uploading AD
+    root certificate
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 31 Jul 2014 18:57:58 +0200
+
 univention-ad-connector (8.0.17-61) unstable; urgency=low
 
   * don't test_connection in upload_certificate if
