* Update AD member mode warning message for LDAP navigation   (Bug #34093)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52439 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-41) unstable; urgency=low
+
+  * Update AD member mode warning message for LDAP navigation
+    (Bug #34093)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 01 Aug 2014 08:54:12 +0200
+
 univention-management-console-module-udm (4.0.97-40) unstable; urgency=low
 
   * Bug #34093: fix displaying of message for non-AD objects
