--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,29 @@
+univention-directory-manager-modules (9.0.76-22) unstable; urgency=medium
+
+  * Make default for _prevent_to_change_ad_properties dependent on ad/member
+    (Bug #34092)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 31 Jul 2014 17:32:20 +0200
+
+univention-directory-manager-modules (9.0.76-21) unstable; urgency=low
+
+  * Set more windows client attributes to readonly when synced
+    (Bug #34092)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Jul 2014 08:49:57 +0200
+
+univention-directory-manager-modules (9.0.76-20) unstable; urgency=low
+
+  * Don't set the CTX flags read only, see Bug #35530 (Bug #34092)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Jul 2014 08:08:10 +0200
+
+univention-directory-manager-modules (9.0.76-19) unstable; urgency=low
+
+  * Set more attributes to readonly when synced (Bug #34092)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 31 Jul 2014 07:53:10 +0200
+
 univention-directory-manager-modules (9.0.76-18) unstable; urgency=medium
 
   * revert changes for (Bug #35254)
