--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,4 +1,26 @@
-univention-s4-connector (8.0.33-66) UNRELEASED; urgency=medium
+univention-s4-connector (8.0.33-69) unstable; urgency=medium
+
+  * No need to make a fuss about running AD Takeover from AD Member mode,
+    revert that part of the last change (Bug #35500).
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:41:33 +0200
+
+univention-s4-connector (8.0.33-68) unstable; urgency=medium
+
+  * When running AD Takeover from AD Member mode we should stop the joinscript
+    after creating the required UDM containers and before starting sync and
+    waiting for DNS replication (Bug #35500).
+  * Make logrotate only "crestart" the s4-connector
+
+ -- Arvid Requate <requate@univention.de>  Wed, 30 Jul 2014 18:12:04 +0200
+
+univention-s4-connector (8.0.33-67) unstable; urgency=medium
+
+  * Remove univention-ad-takeover CLI script (Bug #35514)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Jul 2014 20:00:17 +0200
+
+univention-s4-connector (8.0.33-66) unstable; urgency=medium
 
   * Adjust bug number for Errata update (Bug #35500)
 
