* 00_base/check_log_files_definitions.py: extended and modified patterns,     added separate case for tracebacks;     00_base/99check_log_files: a test to extract warnings, errors and     tracebacks from the logs (Bug #30751)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52452 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.166-63) unstable; urgency=low
+
+  * 00_base/check_log_files_definitions.py: extended and modified patterns,
+    added separate case for tracebacks;
+    00_base/99check_log_files: a test to extract warnings, errors and
+    tracebacks from the logs (Bug #30751)
+
+ -- Dmitry Galkin <galkin@univention.de>  Fri, 01 Aug 2014 10:57:53 +0200
+
 ucs-test (4.0.166-62) unstable; urgency=low
 
   * 20_appcenter/43_installed_apps_check_packages_available_for_i386:
