* Bug #34388: Updated links to appliance wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52455 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-45) unstable; urgency=low
+
+  * Bug #34388: Updated links to appliance wizard
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 01 Aug 2014 11:25:13 +0200
+
 univention-system-setup (7.0.69-44) unstable; urgency=medium
 
   Bug #34484:
