added dependency to python-ldb, python-samba and python-ldap (Bug #35520)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@52462 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-60) unstable; urgency=low
+
+  * added dependency to python-ldb, python-samba
+    and python-ldap (Bug #35520) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 01 Aug 2014 11:51:56 +0200
+
 univention-lib (3.0.26-59) unstable; urgency=low
 
   * check 'dns/forwarder1', 'dns/forwarder2', 'dns/forwarder3',
